# qcai2

./: .clang-tidy  .gitignore  AGENTS.md  AUTOCOMPLETE.md  CHANGELOG.md  CMakeLists.txt  LICENSE  Qcai2.json.in  README.md  VERSION.txt  ai-context.md  install-sidecar-deps.cmake  qcai2.cpp  qcai2.json.in  qcai2constants.h  qcai2tr.h
.github/workflows/: README.md  build_cmake.yml
ai/: ai-context.md
cmake/: clang-static-analyzer-args.cmake  format-changed-files.cmake  format-files.cmake  generate-gcovr-report.cmake  install-sidecar-deps.cmake  qcai2-global-parameters.cmake  qcai2-precompiled-headers.cmake  run-clang-static-analyzer.cmake  run-clang-tidy.cmake
docs/: CODING_STYLE.md  QDRANT.md  conf.py.in  index.rst
lib/qompi/: CMakeLists.txt
lib/qompi/include/qompi/: callback_completion_backend.h  completion_backend.h  completion_engine.h  completion_operation.h  completion_policy.h  completion_profiles.h  completion_session.h  completion_sink.h  completion_types.h  qt_completion_session.h
lib/qompi/src/: precompiled_headers_core.h  precompiled_headers_qt.h
lib/qompi/src/core/: callback_completion_backend.cpp  completion_engine.cpp  completion_operation.cpp  completion_policy.cpp  completion_profiles.cpp  completion_session.cpp
lib/qompi/src/detail/: callback_dispatcher.h
lib/qompi/src/qt/: qt_callback_dispatcher.cpp  qt_completion_session.cpp
lib/qtmcp/: CHANGELOG.md  CMakeLists.txt  README.md
lib/qtmcp/include/qtmcp/: Client.h  HttpTransport.h  ServerDefinition.h  SseTransport.h  StdioTransport.h  Transport.h  http_transport.h  sse_transport.h  stdio_transport.h  transport.h
lib/qtmcp/src/: Client.cpp  HttpTransport.cpp  ServerDefinition.cpp  SseTransport.cpp  StdioTransport.cpp  Transport.cpp  client.cpp  http_transport.cpp  precompiled_headers.h  server_definition.cpp  sse_transport.cpp  stdio_transport.cpp  transport.cpp
resources/: aiagentplugin.qrc
scripts/: generate-qdrant-client.sh  install-format-hook.sh
scripts/qdrant/: cert.sh  config.yml  install.sh  qdrant.service
sidecar/: copilot-sidecar.js  package-lock.json  package.json
src/: AgentController.cpp  AgentController.cpp.orig  AgentController.h  AgentDockWidget.cpp  AgentDockWidget.cpp.orig  AgentDockWidget.cpp.rej  AgentDockWidget.h  AgentDockWidget.h.orig  AiAgentPlugin.cpp  AiAgentPlugin.h  qcai2.cpp  qcai2constants.h  qcai2tr.h
src/completion/: AiCompletionProcessor.cpp  AiCompletionProcessor.h  AiCompletionProvider.cpp  AiCompletionProvider.h  CompletionTrigger.cpp  CompletionTrigger.h  GhostTextManager.cpp  GhostTextManager.h  GhostTextOverlay.cpp  GhostTextOverlay.h
src/context/: EditorContext.cpp  EditorContext.h
src/diff/: InlineDiffManager.cpp  InlineDiffManager.h
src/docs/: Doxyfile.in  conf.py.in  index.rst  overview.rst
src/models/: AgentMessages.cpp  AgentMessages.cpp.orig  AgentMessages.h  ToolCall.cpp  ToolCall.h
src/providers/: CopilotProvider.cpp  CopilotProvider.h  IAIProvider.h  LocalHttpProvider.cpp  LocalHttpProvider.h  OllamaProvider.cpp  OllamaProvider.h  OpenAICompatibleProvider.cpp  OpenAICompatibleProvider.cpp.orig  OpenAICompatibleProvider.h
src/safety/: SafetyPolicy.cpp  SafetyPolicy.h
src/settings/: Settings.cpp  Settings.cpp.orig  Settings.h  Settings.h.orig  SettingsPage.cpp  SettingsPage.cpp.orig  SettingsPage.h
src/sidecar/: copilot-sidecar.js  copilot-sidecar.test.js  package.json
src/src/: AgentController.cpp  AgentController.h  AgentDockWidget.cpp  AgentDockWidget.h  AiAgentPlugin.cpp  AiAgentPlugin.h  agent_controller.cpp  agent_controller.h  agent_run_state_machine.cpp  agent_run_state_machine.h  ai_agent_plugin.cpp  ai_agent_plugin.h  precompiled_headers.h
src/src/clangd/: clangd_service.cpp  clangd_service.h
src/src/commands/: CompactCommand.cpp  ExplainCommand.cpp  HelloCommand.cpp  RefactorCommand.cpp  SlashCommandRegistry.cpp  SlashCommandRegistry.h  TestCommand.cpp  compact_command.cpp  compact_command.h  explain_command.cpp  hello_command.cpp  refactor_command.cpp  search_command.cpp  slash_command_registry.cpp  slash_command_registry.h  test_command.cpp
src/src/completion/: AiCompletionProcessor.cpp  AiCompletionProcessor.h  AiCompletionProvider.cpp  AiCompletionProvider.h  CompletionTrigger.cpp  CompletionTrigger.h  GhostTextManager.cpp  GhostTextManager.h  GhostTextOverlay.cpp  GhostTextOverlay.h  ai_completion_processor.cpp  ai_completion_processor.h  ai_completion_provider.cpp  ai_completion_provider.h  completion_clang_context.cpp  completion_clang_context.h  completion_trigger.cpp  (+13 more)
src/tests/: CMakeLists.txt  precompiled_headers.h  tst_actions_log_delegate.cpp  tst_actions_log_links.cpp  tst_actions_log_model.cpp  tst_actions_log_view.cpp  tst_agent_controller_soft_steer.cpp  tst_agent_messages.cpp  tst_agent_progress.cpp  tst_agent_run_state_machine.cpp  tst_auto_hiding_list_widget.cpp  tst_chat_context.cpp  tst_clangd_tools.cpp  tst_completion_clang_context.cpp  tst_completion_detailed_log.cpp  tst_completion_request_settings.cpp  tst_completion_response_utils.cpp  tst_completion_trigger_utils.cpp  tst_debugger_session_service.cpp  tst_debugger_tools.cpp  tst_debugger_ui_integration.cpp  tst_decision_request_widget.cpp  tst_diff_hunk_anchor.cpp  tst_diff_hunk_text_edit.cpp  tst_diff_preview_navigation.cpp  tst_diff_preview_text_edit.cpp  tst_file_tools.cpp  tst_json.cpp  tst_mcp_config.cpp  tst_migration.cpp  tst_output_capture.cpp  tst_project_root_resolver.cpp  tst_prompt_instructions.cpp  tst_provider_usage.cpp  tst_qompi_completion_policy.cpp  tst_qompi_completion_profiles.cpp  tst_qompi_completion_session.cpp  tst_qompi_provider_backend_adapter.cpp  tst_qompi_qt_completion_session.cpp  tst_request_detailed_log.cpp  (+10 more)
src/tools/: BuildTools.cpp  BuildTools.h  FileTools.cpp  FileTools.h  GitTools.cpp  GitTools.h  ITool.h  IdeTools.cpp  IdeTools.h  SearchTools.cpp  SearchTools.h  ToolRegistry.cpp  ToolRegistry.h
src/util/: CrashHandler.cpp  CrashHandler.h  Diff.cpp  Diff.h  Json.cpp  Json.h  Logger.cpp  Logger.h  ProcessRunner.cpp  ProcessRunner.h
tests/: CMakeLists.txt  tst_json.cpp  tst_toolcall.cpp
(+277 files in other folders)
